# bitpit

./: .clang-format  .cproject  .directory  .gitignore  .gitignore~  .project  .travis.yml  AUTHORS.md  BUILD.bazel  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  INSTALL.md  README.md  README_WINDOWS.md  THIRDPARTIES.md  WORKSPACE.bazel  _config.yml  _config_local.yml  defs.bzl  index.html  license.html  params.json  privacy.html  runParallelTests.sh  runSerialTests.sh  s0001-Pablo120_iter1.pvtu  s0001-Pablo120_iter2.pvtu  s0001-p0000-Pablo120_iter1.vtu  s0001-p0000-Pablo120_iter2.vtu
cmake/: BITPITConfig.cmake.in  BITPITConfigVersion.cmake.in  CMakeLists.txt  FindBITPIT.cmake  FindBITPIT.cmake.in  FindBITP_BASE.cmake.in  FindBITP_MESH.cmake.in  FindPATCHMAN.cmake  FindPATCHMAN.cmake.in  LibFindMacros.cmake  UseBITPIT.cmake
doc/: CMakeLists.txt  Doxyfile.in  README.md  bitpitStyleSheet.css
doc/extra/: BitP_Base.hpp  BitP_Mesh.hpp  BitPit.hpp  BitPitStyleGuide.hpp  bitpit.hpp  bitpitStyleGuide.hpp  styleguide.hpp
examples/: CMakeLists.txt  LA_example_00001.cpp  LA_example_00002.cpp  PABLO_bubbles_2D.cpp  PABLO_bubbles_3D.cpp  PABLO_example_00001.cpp  PABLO_example_00002.cpp  PABLO_example_00003.cpp  PABLO_example_00004.cpp  PABLO_example_00005.cpp  PABLO_example_00006.cpp  PABLO_example_00007.cpp  PABLO_example_00008.cpp  PABLO_example_00009.cpp  PABLO_example_00010.cpp  PABLO_example_00011.cpp  PABLO_example_00012.cpp  PABLO_userDataComm.hpp  PABLO_userDataComm.tpp  PABLO_userDataLB.hpp  PABLO_userDataLB.tpp  POD_application_example_00001.cpp  POD_example_00001.cpp  POD_example_00002.cpp  POD_example_00003.cpp  POD_example_00004.cpp  POD_example_00005.cpp  RBF_example_00001.cpp  RBF_example_00001.param  UserDataComm.hpp  UserDataLB.hpp  UserDataLB.tpp  User_Data_Comm.hpp  User_Data_LB.hpp  bubbles.cpp  bubbles3D.cpp  cartesianpatch_example_00001.cpp  createCartesianMesh2D.cpp  index.html  manipulatePiercedVector.cpp  (+27 more)
opt_IO/: .gitignore  CMakeLists.txt
opt_IO/include/: Class_VTK_Unstructured.tpp  Class_VTK_Wrappers.hpp  Class_VTK_Wrappers.tpp  Generic_IO.hpp  STL_IOFunct.tpp
opt_IO/lib/: Class_VTK_Input.cpp  Class_VTK_Output.cpp  DGF_IOFunct.cpp
opt_IO/test_lib/: CMakeLists.txt  main.cpp
opt_LA/: CMakeLists.txt
opt_LA/test_lib/: CMakeLists.txt  main.cpp
opt_base/: CMakeLists.txt
opt_base/include/: MathOperators_vector.tpp  Operators.hpp
opt_base/lib/: CMakeLists.txt  stringTools.cpp
opt_base/test_lib/: CMakeLists.txt
src/: .directory  CMakeLists.txt  Class_Array.hpp  Class_Comm_Buffer.cpp  Class_Global_2D.tpp  Class_Intersection_2D.tpp  Class_Local_Tree_2D.tpp  Class_Map.tpp  Class_Octree.cpp  Class_Octree.hpp  Class_Para_Tree_2D.tpp  Class_Para_Tree_3D.tpp  PABLO.cpp  cell.cpp  cell.hpp  collapsedArray2D.hpp  collapsedArrayArray.hpp  element.cpp  element.hpp  interface.cpp  interface.hpp  mpi_datatype_conversion.hpp  node.cpp  node.hpp  output_manager.cpp  output_manager.hpp  patch.cpp  patch.hpp  patch_cartesian.cpp  patch_cartesian.hpp  patch_octree.cpp  patch_octree.hpp  patchman.hpp  patchmanv.h  piercedVector.hpp  stringTools.hh
src/CG/: CG.hpp  CG_algorithms.cpp  CG_elem.cpp  CG_private.hpp  CMakeLists.txt  bitpit_CG.hpp
src/IO/: .directory  BitP_Base_IO.hpp  BitPit_IO.hpp  CMakeLists.txt  Class_FH.cpp  Class_FH.hpp  Class_VTK.cpp  Class_VTK.hpp  Class_VTK.tpp  Class_VTK_Output.cpp  Class_VTK_Output.tpp  Class_VTK_Rectilinear.tpp  Class_VTK_Unstructured.tpp  Class_VTK_Wrappers.cpp  Class_VTK_Wrappers.hpp  Class_VTK_Wrappers.tpp  Class_VTK_field.cpp  DGF.cpp  DGF.hpp  DGF.tpp  DGF_IOFunct.cpp  DGF_IOFunct.hpp  DGF_IOFunct.tpp  FileHandler.cpp  FileHandler.hpp  GenericIO.cpp  GenericIO.hpp  GenericIO.tpp  Generic_IO.cpp  Generic_IO.hpp  Generic_IO.tpp  STL.cpp  STL.hpp  STL.tpp  STL_IOFunct.cpp  STL_IOFunct.hpp  STL_IOFunct.tpp  VTK.cpp  VTK.hpp  VTK.tpp  (+48 more)
src/LA/: BitP_Base_LA.hpp  BitPit_LA.hpp  CMakeLists.txt  LinearAlgebra.cpp  LinearAlgebra.hpp  LinearAlgebra.tpp  LinearAlgebra2.tpp  Manipulation.tpp  Multiplication.tpp  Solve.cpp  Solve.tpp  bitpit_LA.hpp  manipulation.hpp  manipulation.tpp  matrix_utilities.cpp  matrix_utilities.hpp  matrix_utilities.tpp  multiplication.hpp  multiplication.tpp  system_matrix.cpp  system_matrix.hpp  system_matrix.tpp  system_solvers_large.cpp  system_solvers_large.hpp  system_solvers_large.tpp  system_solvers_small.cpp  system_solvers_small.hpp  system_solvers_small.tpp  system_solvers_split.cpp  system_solvers_split.hpp
src/PABLO/: Array.cpp  Array.hpp  CMakeLists.txt  CommBuffer.cpp  CommBuffer.hpp  DataCommInterface.hpp  DataCommInterface.tpp  DataLBInterface.cpp  DataLBInterface.hpp  DataLBInterface.tpp  Global.cpp  Global.hpp  Intersection.cpp  Intersection.hpp  LocalTree.cpp  LocalTree.hpp  Log.cpp  Log.hpp  Map.cpp  Map.hpp  Octant.cpp  Octant.hpp  PabloNonUniform.cpp  PabloNonUniform.hpp  PabloUniform.cpp  PabloUniform.hpp  ParaTree.cpp  ParaTree.hpp  bitpit_PABLO.hpp  inlinedFunct.hpp  logFunct.cpp  logFunct.hpp  morton.hpp  mpi_datatype_conversion.hpp  tree_constants.cpp  tree_constants.hpp
src/POD/: CMakeLists.txt  bitpit_POD.hpp  mesh_mapper.cpp  mesh_mapper.hpp  pod.cpp  pod.hpp  pod_common.hpp  pod_kernel.cpp  pod_kernel.hpp  pod_voloctree.cpp  pod_voloctree.hpp
src/RBF/: CMakeLists.txt  bitpit_RBF.hpp  rbf.cpp  rbf.hpp  rbf.tpp  rbf_config.hpp.in
src/SA/: BitP_Base_SA.hpp  BitPit_SA.hpp  CMakeLists.txt  KdTree.tpp  LIFOStack.tpp  LIFOstack.tpp  PQUEUE.tpp  PQueue.tpp  SortAlgorithms.cpp  (+3 more)
test/: .directory  CMakeLists.txt  CMakeLists.txt.rej  CMakeLists.txt~  User_Data_Comm.hpp  User_Data_Comm.tpp  User_Data_LB.hpp  User_Data_LB.tpp  pablo.cpp  pablo_001.cpp  pablo_002.cpp  pablo_003.cpp  pablo_004.cpp  parallel_pablo_001.cpp  patchman.cpp  patchman_001.cpp  patchman_002.cpp  patchman_003.cpp  runtests.sh  runtests.sh~  surftri.cpp  surftri_001.cpp  surftri_002.cpp  surftri_003.cpp  surftri_004.cpp  surftri_005.cpp  test0.cpp  test1.cpp  test104.cpp  test116.cpp  test12.cpp  test120.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test1b.cpp  test2.cpp  test3.cpp  (+35 more)
(+19048 files in other folders)
